style: fix hover backgroud overlapping with marker and glitch when marker becomes visible for the first time

--- a/src/components/RadioButtonGroup/styles.scss
+++ b/src/components/RadioButtonGroup/styles.scss
@@ -41,6 +41,7 @@
     .rainbow-radio-button-group_marker {
         position: absolute;
         background: white;
+        opacity: 0;
         top: 0;
         bottom: 0;
         margin: auto;
@@ -72,6 +73,8 @@
         border: solid 1px transparent;
         transition: transform 600ms cubic-bezier(0.02, 0.94, 0.09, 0.97), all 300ms cubic-bezier(0.17, 0.67, 0.14, 1.03);
         transform: translate3d(0, 0, 0);
+        margin-left: 1px;
+        margin-right: 1px;
 
         &:first-child {
             margin-left: -1px;
